--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ document.addEventListener('DOMContentLoaded', () => {
             question.textContent = 'I Gave you Another Chance';
             currentGif.src = 'https://media.tenor.com/ViqKvHcmPQEAAAAM/please.gif';
         } else if (question.textContent === 'I Gave you Another Chance') {
-            question.textContent = 'Your favorite Food Swear';
+            question.textContent = 'Your Favorite Food Swear, Please Say Yes🥺';
             currentGif.src = 'https://i.pinimg.com/originals/77/84/06/778406bdc8621ffbe8beeff0519c9c94.gif';
-        } else if (question.textContent === 'Your favorite Food Swear') {
+        } else if (question.textContent === 'Your Favorite Food Swear, Please Say Yes🥺') {
             question.textContent = 'You have to like me!';
             currentGif.src = 'https://i.pinimg.com/originals/7c/45/b7/7c45b74379a9f773bb54ba399925bf81.gif';
         }
